Release v1.4.6-B with admin commands and GUI
- Add AdminCommandHandler with info, marry, divorce, reset, and achievement grant/revoke subcommands
- Add AchievementInventoryListener to lock the achievements GUI
- Add achievements GUI (openAchievementsGui) with hidden achievement support and progress display
- Add grant/revoke/hasUnlocked methods to AchievementManager
- Add hidden field to AchievementDefinition and unread field to PartnerMail
- Add /marry mail unread command to mark messages as unread
- Add marriageplus.admin.backpack permission
- Expand achievements.yml and quests.yml with many new definitions and rewards
- Refactor AnniversaryManager reward methods to use achievements config
- Add family lang entries for chat, tree, profile, and error messages
- Bump version to 1.4.6-B